# vmware-migration-agent

./: .env.axample  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  config.yaml  discovery-2.json  discovery.json  pyproject.toml
agent/: config_loader.py  graph.py  llm_client.py  prompts.py  state.py
agent/nodes/: blocker_parser.py  cim_mapper.py  enricher.py  hcl_generator.py  ingest.py  mcp_client.py  rag_retriever.py  reporter.py  sizer.py  validator.py
cim/: cim.schema.json  schema.py  vmware_translator.py
cli/: main.py
docs/: README.md  cim-and-translation.md  cli.md  configuration.md  output-and-validation.md  pipeline.md
providers/: base.py
providers/aws/: compute.py  network.py  sizing_table.py  storage.py
providers/azure/: compute.py  network.py  sizing_table.py  storage.py
providers/gcp/: compute.py  network.py  sizing_table.py  storage.py
providers/openstack/: compute.py  network.py  sizing_table.py  storage.py
tests/agent/: test_graph.py  test_llm_client.py
tests/cli/: test_main.py
tests/nodes/: test_hcl_generator.py  test_mcp_client.py  test_reporter.py  test_validator.py
tests/validation/: test_opa_client.py  test_tf_runner.py
validation/: opa_client.py  tf_runner.py
validation/policies/: encryption_at_rest.rego  no_open_ingress.rego  no_public_s3.rego  tags_required.rego
vmware_migration_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
